php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35999 recursive mkdir() does not work with relative path like "foo/bar"
Submitted: 2006-01-13 17:30 UTC Modified: 2006-01-16 20:48 UTC
From: mauroi at digbang dot com Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 5.1.2 OS: *
Private report: No CVE-ID: None
 [2006-01-13 17:30 UTC] mauroi at digbang dot com
Description:
------------
mkdir with the recursive parameter, trying to create a directory relative to the current working directory, fails in some cases

Reproduce code:
---------------
mkdir('level1\\level2', null, true);
mkdir('.\\level1a\\level2a', null, true);


Expected result:
----------------
level1\level2
and
level1a\level2s
created

Actual result:
--------------
the first statement fails with:
Warning: mkdir(): No such file or directory

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-01-14 04:05 UTC] mauroi at digbang dot com
Typo. In Expected result it should read:
level1\level2
and
level1a\level2a
created
 [2006-01-16 20:48 UTC] tony2001@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC