fix bug #35999 (recursive mkdir() does not work with relative path like "foo/bar")